--- a/src/app/products/products.component.scss
+++ b/src/app/products/products.component.scss
@@ -3,7 +3,7 @@
 .products-page {
     display: flex;
     padding: 40px 80px;
-
+    background: $background;
     .filter-section {
         box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
         padding: 30px 40px 30px 0px;
@@ -62,7 +62,7 @@
         grid-template-columns: 1fr 1fr 1fr;
         grid-gap: 60px;
 
-        @media screen and (max-width: 1080px) {
+        @media screen and (max-width: 1090px) {
             grid-template-columns: 1fr 1fr;
         }
 
