--- a/src/app/products/products.component.scss
+++ b/src/app/products/products.component.scss
@@ -29,6 +29,11 @@
                 cursor: pointer;
             }
         }
+        .border-bot {
+            border-bottom: 2px solid $pink;
+            margin-left: 40px;
+            margin-bottom: 20px;
+        }
     }
 
     .search-section {
