--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -1,5 +1,5 @@
 <div class="shopping-cart">
-    <h3>Shopping Cart</h3>
+    <h3 class="heading">Shopping Cart</h3>
     <div class="empty-cart" *ngIf="items.length==0">
         <img class="emty-cart-img mb-50" src="../../assets/images/empty-cart-svgrepo-com.svg">
         <i class="fa-light fa-bags-shopping"></i>
