--- a/src/app/products/products.component.scss
+++ b/src/app/products/products.component.scss
@@ -4,34 +4,39 @@
     display: flex;
     padding: 40px 80px;
     background: $background;
+    width: 100%;
+
     .filter-section {
         box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-        padding: 30px 40px 30px 0px;
+        padding: 30px 10px 30px 10px;
         border-radius: 5px;
         height: fit-content;
         margin-right: 10%;
         background-color: $white;
         color: $gray;
+        width: 20%;
 
         .list {
             list-style: none;
             margin-bottom: 20px;
+            padding-left: 10px;
 
             .list-heading {
                 font-weight: bold;
             }
 
-            .mb-10{
+            .mb-10 {
                 margin-bottom: 10px;
             }
+
             .checkbox {
                 margin-right: 10px;
                 cursor: pointer;
             }
         }
+
         .border-bot {
             border-bottom: 2px solid $pink;
-            margin-left: 40px;
             margin-bottom: 20px;
         }
     }
@@ -40,9 +45,11 @@
         .input-group {
             margin: 0px auto 50px auto;
             width: 300px;
+
             .fas {
                 color: $gray;
             }
+
             .form-control {
                 &:focus {
                     border-color: $pink ;
@@ -76,7 +83,7 @@
         }
 
         .card {
-            width: 250px;
+            width: 218px;
             padding: 20px;
             transition: all .5s ease;
             color: $gray;
@@ -97,24 +104,6 @@
 
             .card-text {
                 font-size: 14px;
-            }
-
-            .quantity-button {
-                margin: 12px 0px;
-                border: 2px solid $gray;
-                width: fit-content;
-                border-radius: 5px;
-                padding: 3px;
-
-                button {
-                    background: none;
-                    border: none;
-                    color: $gray;
-
-                    &:hover:not(.no-hover-color) {
-                        color: $pink;
-                    }
-                }
             }
 
 
