header fix and search on enter

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="landing-page">
-<div>
+<div class="header">
 <nav class="navbar navbar-dark bg-dark">
   <i routerLink="/home" class="fa-solid fa-vest-patches float-left"></i>
   <a class="navbar-brand" routerLink="/home">TeeRex Store
